--- a/style-new.css
+++ b/style-new.css
@@ -47,19 +47,19 @@ body {
   left: 65px; }
 
 .drag {
-  background-color: #0a0d0d;
+  background-color: #e1e3ce;
   border: 2px solid;
-  border-color: #b8b4ab;
+  border-color: #597581;
   border-radius: 0em;
   position: absolute;
-  color: #596868;
+  color: #597581;
   padding: 4px;
   -webkit-transform: translate(0px, 0px);
   transform: translate(0px, 0px); }
 
 .resize-drag {
-  background-color: #0a0d0d;
-  color: #596868;
+  background-color: #e1e3ce;
+  color: #597581;
   box-sizing: border-box; }
 
 h3 {
@@ -69,71 +69,71 @@ h3 {
   margin-top: 0; }
 
 .color1 {
-  color: #b8b4ab;
+  color: #597581;
   padding: 0; }
 
 .color2 {
-  color: #d8d3cd;
+  color: #2a254d;
   padding: 0; }
 
 .color3 {
-  color: #8f857c;
+  color: #944961;
   padding: 0; }
 
 .color4 {
-  color: #596868;
+  color: #597581;
   padding: 0; }
 
 .color5 {
-  color: #798d8c;
+  color: #8d7783;
   padding: 0; }
 
 .color6 {
-  color: #9eb8b7;
+  color: #492a24;
   padding: 0; }
 
 .color7 {
-  color: #c9e9e7;
+  color: #474f62;
   padding: 0; }
 
 .color8 {
-  color: #46b0ac;
+  color: #477567;
   padding: 0; }
 
 .color9 {
-  color: #e0c160;
+  color: #486444;
   padding: 0; }
 
 .color10 {
-  color: #8db3e9;
+  color: #473f7e;
   padding: 0; }
 
 .color11 {
-  color: #66aca9;
+  color: #822b47;
   padding: 0; }
 
 .color12 {
-  color: #85b0eb;
+  color: #395c6b;
   padding: 0; }
 
 .color13 {
-  color: #e4ace3;
+  color: #5a4c53;
   padding: 0; }
 
 .color14 {
-  color: #e7959b;
+  color: #8a5d46;
   padding: 0; }
 
 .color15 {
-  color: #bda765;
+  color: #263046;
   padding: 0; }
 
 .colorb {
-  color: #0a0d0d;
+  color: #e1e3ce;
   padding: 0; }
 
 .colorf {
-  color: #b7d5d3;
+  color: #1a1639;
   padding: 0; }
 
 form {
@@ -144,20 +144,20 @@ input {
   background: none;
   display: inline;
   border: none;
-  color: #596868;
+  color: #597581;
   font-size: 14px; }
 
 a:link {
-  color: #798d8c; }
+  color: #8d7783; }
 
 a:visited {
-  color: #798d8c; }
+  color: #8d7783; }
 
 a:hover {
-  color: #9eb8b7; }
+  color: #492a24; }
 
 a:active {
-  color: #b8b4ab; }
+  color: #597581; }
 
 .btn-group .button {
   background: none;
@@ -167,11 +167,11 @@ a:active {
   font-weight: bold;
   display: inline-block;
   font-size: 14px;
-  color: #b7d5d3;
+  color: #1a1639;
   cursor: pointer; }
 
 .btn-group .button:hover {
-  color: #798d8c;
+  color: #8d7783;
   background-color: none; }
 
 /*# sourceMappingURL=style-test.css.map */
