--- a/style-new.css
+++ b/style-new.css
@@ -5,7 +5,7 @@ html {
 
 body {
   background-image: url("bg.jpg");
-  background-size: 100% 100%;
+  background-repeat: repeat;
   position: absolute;
   top: 0;
   left: 0;
